Feature/tutor meets (#43)
* Added new /profile/meets endpoint

* Fixed lint
